Working on GWT module. Game logic works but canvas is not being drawn correctly (needs to be fixed).

--- a/gwt/src/main/java/pacman/public/index.html
+++ b/gwt/src/main/java/pacman/public/index.html
@@ -20,9 +20,17 @@
             outline: none;
             -webkit-tap-highlight-color: rgba(255, 255, 255, 0); /* mobile webkit */
         }
+
+        div#canvasContainer {
+            margin: 15px auto auto;
+            width: 80%;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
+<div id="barContainer"></div>
+<div id="canvasContainer"></div>
 <noscript>
     <div style="width: 22em; position: absolute; left: 50%; margin-left: -11em; color: red;
 			background-color: white; border: 1px solid red; padding: 4px; font-family: sans-serif">
