--- a/gwt/src/main/java/pacman/public/index.html
+++ b/gwt/src/main/java/pacman/public/index.html
@@ -10,10 +10,12 @@
     <style>
         html, body {
             padding: 0;
+            margin: 0 !important;
             width: 100%;
             height: 100%;
             overflow: hidden;
             box-sizing: border-box;
+            background: black !important;
         }
 
         canvas {
